# cli-continue-speaking

./: .env.example  .gitignore  CLAUDE.md  README.md  assistant.py  main.py  pyproject.toml
assistant/: app.py  auto_reply.py  config.py  llm.py  settings.py  tools.py  tts.py
assistant/tools/: __init__.py  core.py
assistant/tools/discord/: README.md  __init__.py  bot.py  client.py
assistant/tools/gmail/: README.md  __init__.py  client.py
assistant/tools/local_files/: README.md  __init__.py  client.py
assistant/tools/notion/: README.md  __init__.py  client.py
assistant/tools/search/: README.md  __init__.py  client.py
assistant/tools/search/providers/: __init__.py  tavily.py
