[project]
name = "v-to-work"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper",
    "mlx-audio",
    "google-genai",
    "sounddevice",
    "pynput",
    "python-dotenv",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]
assistant = "assistant.app:main_cli"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
